// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows the creation and listing of todos 1`] = `
<div
  className="app"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="New todo..."
    type="text"
    value=""
  />
  <div>
    <div
      className="filter-menu"
    >
      <div
        className="menu-item active"
        onClick={[Function]}
      >
        All
      </div>
      <div
        className="menu-item"
        onClick={[Function]}
      >
        Incomplete
      </div>
      <div
        className="menu-item"
        onClick={[Function]}
      >
        Completed
      </div>
    </div>
    <ul
      className="todo-list"
    />
  </div>
</div>
`;

exports[`allows the creation and listing of todos 2`] = `
<div
  className="app"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="New todo..."
    type="text"
    value=""
  />
  <div>
    <div
      className="filter-menu"
    >
      <div
        className="menu-item active"
        onClick={[Function]}
      >
        All
      </div>
      <div
        className="menu-item"
        onClick={[Function]}
      >
        Incomplete
      </div>
      <div
        className="menu-item"
        onClick={[Function]}
      >
        Completed
      </div>
    </div>
    <ul
      className="todo-list"
    >
      <li
        className=""
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        <span
          className="todo-text"
          onClick={[Function]}
        >
          myNewTodo
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`allows the creation and listing of todos 3`] = `
<div
  className="app"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="New todo..."
    type="text"
    value=""
  />
  <div>
    <div
      className="filter-menu"
    >
      <div
        className="menu-item active"
        onClick={[Function]}
      >
        All
      </div>
      <div
        className="menu-item"
        onClick={[Function]}
      >
        Incomplete
      </div>
      <div
        className="menu-item"
        onClick={[Function]}
      >
        Completed
      </div>
    </div>
    <ul
      className="todo-list"
    >
      <li
        className=""
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        <span
          className="todo-text"
          onClick={[Function]}
        >
          myNewTodo
        </span>
      </li>
      <li
        className=""
      >
        <input
          onClick={[Function]}
          type="checkbox"
        />
        <span
          className="todo-text"
          onClick={[Function]}
        >
          myNewTodo2
        </span>
      </li>
    </ul>
  </div>
</div>
`;
